@@ -3,6 +3,9 @@
 
 dialogfe (05 Jan 2005):
 
+  6 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
+  Patch from zahna to have default option increment in main menu.
+
   4 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
   New timezone function. Minor modifications to set_timezone() from zahna
 
